themeSelector added, minor fixes;

--- a/rooms.html
+++ b/rooms.html
@@ -65,6 +65,7 @@
         </div>
         <div class="divider"></div>
         <div id="language">
+          <button id="themeSwitcher"><img src="SitePics/theme.svg" alt="switchColorTheme" /></button>
           <button id="ruLang" class="buttonLang" lang="ru"><img src="SitePics/ru.svg" alt="ru" /></button>
           <button id="enLang" class="buttonLang" lang="en"><img src="sitePics/gb.svg" alt="en" /></button>
           <button id="kzLang" class="buttonLang" lang="kz"><img src="sitePics/kz.svg" alt="kz" /></button>
@@ -118,86 +119,101 @@
       <h3 lang="kz">Бөлмелер</h3>
 
       <ul id="roomsList">
-        <li class="roomPreview">
-          <img src="Rooms/LuxPr.jpg" alt="Lux" />
-          <div class="room-rating">
-            <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-          </div>
-          <i lang="ru">Люкс</i>
-          <i lang="en">Lux</i>
-          <i lang="kz">Люкс</i>
-        </li>
+        <a href="#luxHeader">
+          <li class="roomPreview">
+            <img src="Rooms/LuxPr.jpg" alt="Lux" />
+            <div class="room-rating">
+              <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+            </div>
+            <i lang="ru">Люкс</i>
+            <i lang="en">Lux</i>
+            <i lang="kz">Люкс</i>
+          </li></a
+        >
+        <a href="#luxStudioHeader">
+          <li class="roomPreview">
+            <img src="Rooms/LuxStudioPr.jpg" alt="Lux" />
+            <div class="room-rating">
+              <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+            </div>
+            <i lang="ru">Студия Люкс</i>
+            <i lang="en">Lux Studio</i>
+            <i lang="kz">Люкс</i>
+          </li>
+        </a>
 
-        <li class="roomPreview">
-          <img src="Rooms/LuxStudioPr.jpg" alt="Lux" />
-          <div class="room-rating">
-            <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-          </div>
-          <i lang="ru">Студия Люкс</i>
-          <i lang="en">Lux Studio</i>
-          <i lang="kz">Люкс</i>
-        </li>
+        <a href="#semiLuxHeader"
+          ><li class="roomPreview">
+            <img src="Rooms/SemiLux.jpg" alt="SemiLux" />
+            <div class="room-rating">
+              <span class="stars">&#9733;&#9733;&#9733;&#9733;</span>
+            </div>
+            <i lang="ru">Полулюкс</i>
+            <i lang="en">Junior Suite</i>
+            <i lang="kz">Жартылай люкс</i>
+          </li>
+        </a>
 
-        <li class="roomPreview">
-          <img src="Rooms/SemiLux.jpg" alt="SemiLux" />
-          <div class="room-rating">
-            <span class="stars">&#9733;&#9733;&#9733;&#9733;</span>
-          </div>
-          <i lang="ru">Полулюкс</i>
-          <i lang="en">Junior Suite</i>
-          <i lang="kz">Жартылай люкс</i>
-        </li>
+        <a href="#standartDuoHeader"
+          ><li class="roomPreview">
+            <img src="Rooms/StandartPr.jpg" alt="Standart" />
+            <div class="room-rating">
+              <span class="stars">&#9733;&#9733;&#9733;</span>
+            </div>
+            <i lang="ru"
+              >Стандарт <br />
+              двухместный</i
+            >
+            <i lang="en">Standart double</i>
+            <i lang="kz">Екі кісілік стандарт</i>
+          </li>
+        </a>
 
-        <li class="roomPreview">
-          <img src="Rooms/StandartPr.jpg" alt="Lux" />
-          <div class="room-rating">
-            <span class="stars">&#9733;&#9733;&#9733;</span>
-          </div>
-          <i lang="ru"
-            >Стандарт <br />
-            двухместный</i
-          >
-          <i lang="en">Standart double</i>
-          <i lang="kz">Екі кісілік стандарт</i>
-        </li>
+        <a href="#standartHeader"
+          ><li class="roomPreview">
+            <img src="Rooms/StandartOne.jpg" alt="Standart" />
+            <div class="room-rating">
+              <span class="stars">&#9733;&#9733;&#9733;</span>
+            </div>
+            <i lang="ru">Стандарт</i>
+            <i lang="en">Standart</i>
+            <i lang="kz">Стандарт</i>
+          </li></a
+        >
 
-        <li class="roomPreview">
-          <img src="Rooms/StandartOne.jpg" alt="Standart" />
-          <div class="room-rating">
-            <span class="stars">&#9733;&#9733;&#9733;</span>
-          </div>
-          <i lang="ru">Стандарт</i>
-          <i lang="en">Standart</i>
-          <i lang="kz">Стандарт</i>
-        </li>
+        <a href="#econom3Header">
+          <li class="roomPreview">
+            <img src="Rooms/EconomPr.jpg" alt="Lux" />
+            <div class="room-rating">
+              <span class="stars">&#9733;&#9733;</span>
+            </div>
+            <i lang="ru"
+              >Эконом <br />
+              трехместный</i
+            >
+            <i lang="en">Low Cost</i>
+            <i lang="kz">Эконом</i>
+          </li>
+        </a>
 
-        <li class="roomPreview">
-          <img src="Rooms/EconomPr.jpg" alt="Lux" />
-          <div class="room-rating">
-            <span class="stars">&#9733;&#9733;</span>
-          </div>
-          <i lang="ru"
-            >Эконом <br />
-            трехместный</i
-          >
-          <i lang="en">Low Cost</i>
-          <i lang="kz">Эконом</i>
-        </li>
-
-        <li class="roomPreview">
-          <img src="Rooms/EconomPr.jpg" alt="Lux" />
-          <div class="room-rating">
-            <span class="stars">&#9733;&#9733;</span>
-          </div>
-          <i lang="ru">Эконом <br /> </i>
-          <i lang="en">Low Cost</i>
-          <i lang="kz">Эконом</i>
-        </li>
+        <a href="#econom5Header">
+          <li class="roomPreview">
+            <img src="Rooms/EconomPr.jpg" alt="Lux" />
+            <div class="room-rating">
+              <span class="stars">&#9733;&#9733;</span>
+            </div>
+            <i lang="ru">Эконом <br /> </i>
+            <i lang="en">Low Cost</i>
+            <i lang="kz">Эконом</i>
+          </li>
+        </a>
       </ul>
     </article>
-    <h3 lang="ru">Люкс</h3>
-    <h3 lang="en">Lux</h3>
-    <h3 lang="kz">Люкс</h3>
+    <div id="luxHeader">
+      <h3 lang="ru">Люкс</h3>
+      <h3 lang="en">Lux</h3>
+      <h3 lang="kz">Люкс</h3>
+    </div>
     <article class="roomArticle" id="lux">
       <div class="roomPhotos">
         <picture class="roomPhoto">
@@ -226,9 +242,12 @@
         </button>
       </div>
     </article>
-    <h3 lang="ru">Студия люкс</h3>
-    <h3 lang="en">Lux</h3>
-    <h3 lang="kz">Люкс</h3>
+
+    <div id="luxStudioHeader">
+      <h3 lang="ru">Студия люкс</h3>
+      <h3 lang="en">Lux</h3>
+      <h3 lang="kz">Люкс</h3>
+    </div>
     <article class="roomArticle" id="luxStudio">
       <div class="roomPhotos">
         <picture class=".articlePhoto">
@@ -258,9 +277,11 @@
       </div>
     </article>
 
-    <h3 lang="ru">Полулюкс одноместный</h3>
-    <h3 lang="en">Junior Suite</h3>
-    <h3 lang="kz">Жартылай люкс</h3>
+    <div id="semiLuxHeader">
+      <h3 lang="ru">Полулюкс одноместный</h3>
+      <h3 lang="en">Junior Suite</h3>
+      <h3 lang="kz">Жартылай люкс</h3>
+    </div>
     <article class="roomArticle" id="semiLux">
       <div class="roomPhotos">
         <img src="Rooms/Semilux/_037.jpg" alt="Lux" />
@@ -288,9 +309,11 @@
       </div>
     </article>
 
-    <h3 lang="ru">Стандарт двухместный</h3>
-    <h3 lang="en">Standart double</h3>
-    <h3 lang="kz">Жартылай люкс</h3>
+    <div id="standartDuoHeader">
+      <h3 lang="ru">Стандарт двухместный</h3>
+      <h3 lang="en">Standart double</h3>
+      <h3 lang="kz">Жартылай люкс</h3>
+    </div>
     <article class="roomArticle" id="standartDuo">
       <div class="roomPhotos">
         <img src="Rooms/Standart Duo/_046.jpg" alt="StandartDuo" />
@@ -317,9 +340,11 @@
       </div>
     </article>
 
-    <h3 lang="ru">Стандарт одноместный</h3>
-    <h3 lang="en">Standart</h3>
-    <h3 lang="kz">Жартылай люкс</h3>
+    <div id="standartHeader">
+      <h3 lang="ru">Стандарт одноместный</h3>
+      <h3 lang="en">Standart</h3>
+      <h3 lang="kz">Жартылай люкс</h3>
+    </div>
     <article class="roomArticle" id="standart">
       <div class="roomPhotos">
         <img src="Rooms/Standart/_029.jpg" alt="standart" />
@@ -346,9 +371,11 @@
       </div>
     </article>
 
-    <h3 lang="ru">Эконом</h3>
-    <h3 lang="en">Low Cost</h3>
-    <h3 lang="kz">Жартылай люкс</h3>
+    <div id="econom3Header">
+      <h3 lang="ru">Эконом</h3>
+      <h3 lang="en">Low Cost</h3>
+      <h3 lang="kz">Жартылай люкс</h3>
+    </div>
     <article class="roomArticle" id="econom">
       <div class="roomPhotos">
         <img src="Rooms/Econom/_050.jpg" alt="Eco" />
@@ -374,9 +401,11 @@
       </div>
     </article>
 
-    <h3 lang="ru">Эконом</h3>
-    <h3 lang="en">Low Cost</h3>
-    <h3 lang="kz">Жартылай люкс</h3>
+    <div id="econom5Header">
+      <h3 lang="ru">Эконом</h3>
+      <h3 lang="en">Low Cost</h3>
+      <h3 lang="kz">Жартылай люкс</h3>
+    </div>
     <article class="roomArticle" id="econom5">
       <div class="roomPhotos">
         <img src="Rooms/Econom/_048.jpg" alt="Eco" />
