--- a/index.html
+++ b/index.html
@@ -112,131 +112,135 @@
     </nav>
 
     <!--Main page starting here-->
+    <main>
+      <article>
+        <h3 lang="ru">Гостиничный комплекс "Целинный"</h3>
+        <h3 lang="en">Hotel "Celinnaya"</h3>
+        <h3 lang="kz">Селіндік қонақ үйі</h3>
 
-    <article>
-      <h3 lang="ru">Гостиничный комплекс "Целинный"</h3>
-      <h3 lang="en">Hotel "Celinnaya"</h3>
-      <h3 lang="kz">Селіндік қонақ үйі</h3>
+        <div class="imageContainer">
+          <picture class=".articlePhoto">
+            <source media="(min-width:1000px)" srcset="Main/Entrance1026.jpg" alt="Entrance1000px" />
+            <source media="(min-width:600px)" srcset="Main/Entrance640.jpg" alt="Entrance600px" />
+            <img src="Main/Entrance300.jpg" alt="Entrance" />
+          </picture>
+        </div>
 
-      <div class="imageContainer">
-        <picture class=".articlePhoto">
-          <source media="(min-width:1000px)" srcset="Main/Entrance1026.jpg" alt="Entrance1000px" />
-          <source media="(min-width:600px)" srcset="Main/Entrance640.jpg" alt="Entrance600px" />
-          <img src="Main/Entrance300.jpg" alt="Entrance" />
-        </picture>
-      </div>
-
-      <p lang="ru">Добро пожаловать в гостиницу «Целинная» — ваш дом вдали от дома в самом сердце г. Костаная.</p>
-      <p lang="en">Welcome to "Tselinnaya" Hotel - your home away from home in the heart of Kostanay city.</p>
-      <p lang="ru">
-        <span class="linkedP about"
-          >Мы находимся в деловом и культурном центре города на пересечении улиц Байтурсынова и Пушкина</span
-        >, всего в 20 минутах езды от аэропорта и в 10 минутах езды от железнодорожного вокзала, что делает нас
-        идеальным местом как для тех, кто останавливается в Костанае в деловых целях, так и для тех, кто приехал
-        отдохнуть.
-      </p>
-      <p lang="en">
-        We are located in the business and cultural center of the city at the intersection of Baytursynov and Pushkin
-        streets, just 20 minutes' drive from the airport and 10 minutes' drive from the railway station, making us the
-        perfect place for both business and leisure travelers.
-      </p>
-      <div class="imageContainer">
-        <picture class=".articlePhoto">
-          <img src="Main/_060.jpg" alt="RoomExample" />
-        </picture>
-      </div>
-      <p lang="ru">
-        Мы предлагаем <span class="linkedP rooms">более 130 уютных и комфортабельных номеров различных категорий</span>,
-        оборудованных всем необходимым для вашего комфорта и удобства. Неважно, путешествуете ли Вы в одиночку, с семьей
-        или в большой компании и каков Ваш бюджет, в гостинице «Целинная» всегда найдется идеальный номер для Вас.
-      </p>
-      <p lang="ru">
-        В нашей гостинице также доступен <span class="linkedP service">широкий спектр дополнительных услуг:</span>
-        бесплатный Wi-Fi, ресторан и кафетерий, конференц-зал, охраняемая бесплатная парковка, прачечная, салон красоты,
-        парикмахерская, стоматологический кабинет.
-      </p>
-      <div class="imageContainer">
-        <picture class=".articlePhoto">
-          <img src="Main/_100.jpg" alt="RoomExample" />
-        </picture>
-      </div>
-      <p lang="ru">
-        <span class="linkedP vacancies">Наши сотрудники</span> всегда готовы помочь вам и ответить на любые вопросы,
-        связанные с бизнесом, туристическими маршрутами или местами отдыха в Костанае. Мы принимаем оплату за проживание
-        как наличными, так и безналичным расчетом.
-      </p>
-      <p lang="ru">
-        Мы уверены, что ваше пребывание в гостинице «Целинная» станет приятным опытом и постоянно работаем над тем,
-        чтобы нашим посетителям было удобно и комфортно. Насладитесь домашней атмосферой и уютом в нашей гостинице!
-      </p>
-      <p lang="ru"></p>
-      <p lang="en">текст на english языке</p>
-      <p lang="kz">текст на kazakh языке</p>
-      <div class="articleText">
-        <i lang="en"
-          >Welcome to "Tselinnaya" Hotel - your home away from home in the heart of Kostanay city. We are located in the
-          business and cultural center of the city at the intersection of Baytursynov and Pushkin streets, just 20
-          minutes' drive from the airport and 10 minutes' drive from the railway station, making us the perfect place
-          for both business and leisure travelers. We offer over 130 cozy and comfortable rooms of various categories,
-          equipped with everything necessary for your comfort and convenience. Whether you're traveling alone, with
-          family, or as part of a tourist group, "Tselinny" Hotel has the perfect room for you. Our hotel also offers a
-          range of additional services: a restaurant and cafeteria, a conference room, a secure free parking lot, a
-          laundry service, a beauty salon, a hairdresser, and a dental office. Our staff is always ready to help you and
-          answer any questions related to business, tourist routes, or places to relax in Kostanay. We accept payment
-          for accommodation both in cash and by credit card. In addition, we offer economy-class rooms for those who
-          want to save on accommodation. We are confident that your stay at "Tselinny" Hotel will be a pleasant and
-          memorable experience, and we guarantee that your stay with us will not only be comfortable but also enjoyable.
-          Enjoy the homely atmosphere and comfort of our hotel.</i
-        >
-        <i lang="kz"
-          >Целинная» қонақ үйіне қош келдіңіз - Костанай қаласының жүрегіндеңіздің үйі. Біз қаланың бизнес және күнәлім
-          центрінде Байтұрсынов мен Пушкин көшелерінің өрісінде орналасқанмыз. Әуежайна 20 минуттан, желі жүгірушілерге
-          арналған қоғамдық бөлімнен 10 минуттан кейін қолайлы жетуге болатын мекен-жай етіп, біз деловық және демалыс
-          саяхатшыларға жақсы таңдау болып табыс береміз. «Целинная» қонақ үйінде сізге қонақтардың барлық
-          категорияларына қатысты 130-дан астам өзіндік және жай қонақтар ұсынылады, оның ішінде әрі жаңа мүмкіндіктерге
-          қол жетімді бар. Сіз тек өзіңіз болсаңыз, отбасыңызбен немесе туристік тобыңызбен жүріс жасасаңыз, «Целинная»
-          қонақ үйінде сіз үшін ідеалды бөлме табылады. Біздің қонақ үйімізде ресторан және кафетерия, конференция залы,
-          қорғалған тегін паркинг, прачечная, сауық салоны, жүзімдік орындары мен дәрігерлер бар.</i
-        >
-      </div>
-    </article>
-    <article>
-      <h3 lang="ru">Наши преимущества</h3>
-      <h3 lang="en">Our Advantages</h3>
-      <h3 lang="kz">Біздің артықшылықтарымыз</h3>
-      <ul id="advantages">
-        <li>
-          <i lang="ru">Индивидуальный подход</i>
-          <i lang="en">Induvidual approach</i>
-          <i lang="kz">Индивидуальный подход</i>
-        </li>
-        <li>
-          <i lang="ru">Приемлемые цены</i>
-          <i lang="en">Affordable Prices</i>
-          <i lang="kz">Қолжетімді бағалар</i>
-        </li>
-        <li>
-          <i lang="ru">Широкий ассортимент номеров</i>
-          <i lang="en">Wide variety of rooms</i>
-          <i lang="kz">Бөлмелердің кең таңдауы</i>
-        </li>
-        <li>
-          <i lang="ru">Внимательный и отзывчивый персонал</i>
-          <i lang="en">Attentive and helpful Staff</i>
-          <i lang="kz">Мұқият және көмекші персонал</i>
-        </li>
-        <li>
-          <i lang="ru">Ухоженные номера</i>
-          <i lang="en">Well-maintained Rooms</i>
-          <i lang="kz">Индивидуальный подход</i>
-        </li>
-        <li>
-          <i lang="ru">Расположение в центре города</i>
-          <i lang="en">Convenient Location in the City Center</i>
-          <i lang="kz">Индивидуальный подход</i>
-        </li>
-      </ul>
-    </article>
+        <p lang="ru">Добро пожаловать в гостиницу «Целинная» — ваш дом вдали от дома в самом сердце г. Костаная.</p>
+        <p lang="en">Welcome to "Tselinnaya" Hotel - your home away from home in the heart of Kostanay city.</p>
+        <p lang="ru">
+          <span class="linkedP about"
+            >Мы находимся в деловом и культурном центре города на пересечении улиц Байтурсынова и Пушкина</span
+          >, всего в 20 минутах езды от аэропорта и в 10 минутах езды от железнодорожного вокзала, что делает нас
+          идеальным местом как для тех, кто останавливается в Костанае в деловых целях, так и для тех, кто приехал
+          отдохнуть.
+        </p>
+        <p lang="en">
+          We are located in the business and cultural center of the city at the intersection of Baytursynov and Pushkin
+          streets, just 20 minutes' drive from the airport and 10 minutes' drive from the railway station, making us the
+          perfect place for both business and leisure travelers.
+        </p>
+        <div class="imageContainer">
+          <picture class=".articlePhoto">
+            <img src="Main/_060.jpg" alt="RoomExample" />
+          </picture>
+        </div>
+        <p lang="ru">
+          Мы предлагаем
+          <span class="linkedP rooms">более 130 уютных и комфортабельных номеров различных категорий</span>,
+          оборудованных всем необходимым для вашего комфорта и удобства. Неважно, путешествуете ли Вы в одиночку, с
+          семьей или в большой компании и каков Ваш бюджет, в гостинице «Целинная» всегда найдется идеальный номер для
+          Вас.
+        </p>
+        <p lang="ru">
+          В нашей гостинице также доступен <span class="linkedP service">широкий спектр дополнительных услуг:</span>
+          бесплатный Wi-Fi, ресторан и кафетерий, конференц-зал, охраняемая бесплатная парковка, прачечная, салон
+          красоты, парикмахерская, стоматологический кабинет.
+        </p>
+        <div class="imageContainer">
+          <picture class=".articlePhoto">
+            <img src="Main/_100.jpg" alt="RoomExample" />
+          </picture>
+        </div>
+        <p lang="ru">
+          <span class="linkedP vacancies">Наши сотрудники</span> всегда готовы помочь вам и ответить на любые вопросы,
+          связанные с бизнесом, туристическими маршрутами или местами отдыха в Костанае. Мы принимаем оплату за
+          проживание как наличными, так и безналичным расчетом.
+        </p>
+        <p lang="ru">
+          Мы уверены, что ваше пребывание в гостинице «Целинная» станет приятным опытом и постоянно работаем над тем,
+          чтобы нашим посетителям было удобно и комфортно. Насладитесь домашней атмосферой и уютом в нашей гостинице!
+        </p>
+        <p lang="ru"></p>
+        <p lang="en">текст на english языке</p>
+        <p lang="kz">текст на kazakh языке</p>
+        <div class="articleText">
+          <i lang="en"
+            >Welcome to "Tselinnaya" Hotel - your home away from home in the heart of Kostanay city. We are located in
+            the business and cultural center of the city at the intersection of Baytursynov and Pushkin streets, just 20
+            minutes' drive from the airport and 10 minutes' drive from the railway station, making us the perfect place
+            for both business and leisure travelers. We offer over 130 cozy and comfortable rooms of various categories,
+            equipped with everything necessary for your comfort and convenience. Whether you're traveling alone, with
+            family, or as part of a tourist group, "Tselinny" Hotel has the perfect room for you. Our hotel also offers
+            a range of additional services: a restaurant and cafeteria, a conference room, a secure free parking lot, a
+            laundry service, a beauty salon, a hairdresser, and a dental office. Our staff is always ready to help you
+            and answer any questions related to business, tourist routes, or places to relax in Kostanay. We accept
+            payment for accommodation both in cash and by credit card. In addition, we offer economy-class rooms for
+            those who want to save on accommodation. We are confident that your stay at "Tselinny" Hotel will be a
+            pleasant and memorable experience, and we guarantee that your stay with us will not only be comfortable but
+            also enjoyable. Enjoy the homely atmosphere and comfort of our hotel.</i
+          >
+          <i lang="kz"
+            >Целинная» қонақ үйіне қош келдіңіз - Костанай қаласының жүрегіндеңіздің үйі. Біз қаланың бизнес және
+            күнәлім центрінде Байтұрсынов мен Пушкин көшелерінің өрісінде орналасқанмыз. Әуежайна 20 минуттан, желі
+            жүгірушілерге арналған қоғамдық бөлімнен 10 минуттан кейін қолайлы жетуге болатын мекен-жай етіп, біз
+            деловық және демалыс саяхатшыларға жақсы таңдау болып табыс береміз. «Целинная» қонақ үйінде сізге
+            қонақтардың барлық категорияларына қатысты 130-дан астам өзіндік және жай қонақтар ұсынылады, оның ішінде
+            әрі жаңа мүмкіндіктерге қол жетімді бар. Сіз тек өзіңіз болсаңыз, отбасыңызбен немесе туристік тобыңызбен
+            жүріс жасасаңыз, «Целинная» қонақ үйінде сіз үшін ідеалды бөлме табылады. Біздің қонақ үйімізде ресторан
+            және кафетерия, конференция залы, қорғалған тегін паркинг, прачечная, сауық салоны, жүзімдік орындары мен
+            дәрігерлер бар.</i
+          >
+        </div>
+      </article>
+      <article>
+        <h3 lang="ru">Наши преимущества</h3>
+        <h3 lang="en">Our Advantages</h3>
+        <h3 lang="kz">Біздің артықшылықтарымыз</h3>
+        <ul id="advantages">
+          <li>
+            <i lang="ru">Индивидуальный подход</i>
+            <i lang="en">Induvidual approach</i>
+            <i lang="kz">Индивидуальный подход</i>
+          </li>
+          <li>
+            <i lang="ru">Приемлемые цены</i>
+            <i lang="en">Affordable Prices</i>
+            <i lang="kz">Қолжетімді бағалар</i>
+          </li>
+          <li>
+            <i lang="ru">Широкий ассортимент номеров</i>
+            <i lang="en">Wide variety of rooms</i>
+            <i lang="kz">Бөлмелердің кең таңдауы</i>
+          </li>
+          <li>
+            <i lang="ru">Внимательный и отзывчивый персонал</i>
+            <i lang="en">Attentive and helpful Staff</i>
+            <i lang="kz">Мұқият және көмекші персонал</i>
+          </li>
+          <li>
+            <i lang="ru">Ухоженные номера</i>
+            <i lang="en">Well-maintained Rooms</i>
+            <i lang="kz">Индивидуальный подход</i>
+          </li>
+          <li>
+            <i lang="ru">Расположение в центре города</i>
+            <i lang="en">Convenient Location in the City Center</i>
+            <i lang="kz">Индивидуальный подход</i>
+          </li>
+        </ul>
+      </article>
+    </main>
 
     <!--footer-->
 
