--- a/vacs.html
+++ b/vacs.html
@@ -23,19 +23,22 @@
       </div>
       <div id="headerInfo">
         <i lang="ru"
-          >Республика Казахстан<br />г. Костанай, ул. Батурсынова, 95<br /><a href="tel:+77076343424"
-            ><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
-          ><br />
+          ><span class="mapLink"
+            ><span class="compass">&#129517;</span>Республика Казахстан<br />г. Костанай,
+            <span class="avoidWrap">ул. Батурсынова, 95</span></span
+          ><br /><a href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a><br />
           <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
         >
         <i lang="en"
-          >The Republic of Kazakhstan<br />Baytursynov Street 95, Kostanay<br /><a href="tel:+77076343424"
+          >The Republic of Kazakhstan<br />Kostanay, <span class="avoidWrap">Baytursynov Street 95</span><br /><a
+            href="tel:+77076343424"
             ><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
           ><br />
           <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
         >
         <i lang="kz"
-          >Қазақстан Республикасы<br />Қостанай, Байтұрсынұлы к-сі, 95<br /><a href="tel:+77076343424"
+          >Қазақстан Республикасы<br />Қостанай,<span class="avoidWrap">Байтұрсынұлы к-сі, 95</span><br /><a
+            href="tel:+77076343424"
             ><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
           ><br />
           <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
@@ -61,6 +64,7 @@
         </div>
         <div class="divider"></div>
         <div id="language">
+          <button id="themeSwitcher"><img src="SitePics/theme.svg" alt="switchColorTheme" /></button>
           <button id="ruLang" class="buttonLang" lang="ru"><img src="SitePics/ru.svg" alt="ru" /></button>
           <button id="enLang" class="buttonLang" lang="en"><img src="sitePics/gb.svg" alt="en" /></button>
           <button id="kzLang" class="buttonLang" lang="kz"><img src="sitePics/kz.svg" alt="kz" /></button>
@@ -69,35 +73,36 @@
     </nav>
 
     <!--Book Room element and navMenu-->
+
     <div id="bookRoomContainer">
       <i class="bookRoom" lang="ru">Забронировать номер</i>
       <i class="bookRoom" lang="en">Book your Room</i>
       <i class="bookRoom" lang="kz">Нөмірді брондау</i>
     </div>
-
     <nav id="navbar">
       <div id="navMenuContainer">
-        <div class="navMenu" id="main">
+        <div class="navMenu main" id="main">
           <i lang="ru">Главная</i>
           <i lang="en">Main page</i>
           <i lang="kz">Главная</i>
         </div>
-        <div class="navMenu" id="rooms">
+        <div class="navMenu rooms" id="rooms">
           <i lang="ru">Номера</i>
           <i lang="en">Rooms</i>
           <i lang="kz">Бөлмелер</i>
         </div>
-        <div class="navMenu" id="service">
+        <div class="navMenu service" id="service">
           <i lang="ru">Услуги</i>
           <i lang="en">Services</i>
           <i lang="kz">Қызметтер</i>
         </div>
-        <div class="navMenu" id="vacancies">
+        <div class="navMenu vacancies" id="vacancies">
           <i lang="ru">Вакансии</i>
           <i lang="en">Vacancies</i>
           <i lang="kz">Бос жұмыс орындары</i>
         </div>
-        <div class="navMenu" id="about">
+
+        <div class="navMenu about" id="about">
           <i lang="ru">Как добраться</i>
           <i lang="en">Find Us</i>
           <i lang="kz">Біз туралы</i>
@@ -118,5 +123,97 @@
       </p>
       <p lang="en">Welcome to "Tselinnaya" Hotel - your home away from home in the heart of Kostanay city.</p>
     </article>
+
+    <!--footer-->
+
+    <nav class="footer">
+      <div id="footerElements">
+        <div id="bottomLogo">
+          <img id="mainLogoBottom" src="SitePics/mainLogo.svg" />
+        </div>
+
+        <ul id="bottomLinks">
+          <i class="bottomTitle" lang="ru">Карта сайта</i>
+          <i class="bottomTitle" lang="en">Sitemap</i>
+          <i class="bottomTitle" lang="kz">Cайт картасы</i>
+          <li class="bottomLink main">
+            <i lang="ru">Главная</i>
+            <i lang="en">Main page</i>
+            <i lang="kz">Главная</i>
+          </li>
+          <li class="bottomLink rooms">
+            <i lang="ru">Номера</i>
+            <i lang="en">Rooms</i>
+            <i lang="kz">Бөлмелер</i>
+          </li>
+          <li class="bottomLink service">
+            <i lang="ru">Услуги</i>
+            <i lang="en">Services</i>
+            <i lang="kz">Қызметтер</i>
+          </li>
+          <li class="bottomLink vacancies">
+            <i lang="ru">Вакансии</i>
+            <i lang="en">Vacancies</i>
+            <i lang="kz">Бос жұмыс орындары</i>
+          </li>
+          <li class="bottomLink about">
+            <i lang="ru">Как добраться</i>
+            <i lang="en">Find Us</i>
+            <i lang="kz">Біз туралы</i>
+          </li>
+        </ul>
+
+        <ul id="contactUs">
+          <i class="bottomTitle" lang="ru">Связаться с нами</i>
+          <i class="bottomTitle" lang="en">Contact Us</i>
+          <i class="bottomTitle" lang="kz">Селіндік қонақ үйі</i>
+          <li class="contactUsBottom">
+            <a href="whatsapp://send?phone=77076343424">
+              <span><img class="emojiImages" src="SitePics/instagram.svg" /></span> Whatsapp</a
+            >
+          </li>
+          <li class="contactUsBottom">
+            <a href="mailto:celinnaya@mail.ru"><span>&#128231;</span>celinnaya@mail.ru</a>
+          </li>
+          <li class="contactUsBottom">
+            <a href="mailto:gcelinnaya@gmail.com"><span>&#128231;</span>gcelinnaya@gmail.com</a>
+          </li>
+          <li class="contactUsBottom">
+            <a href="tel:+77076343424"><span>&#128222;</span>+7 (707) 634 34 24</a>
+          </li>
+          <li class="contactUsBottom">
+            <a href="tel:+77142544366"><span>&#128222;</span>+7 (7142) 54 43 66</a>
+          </li>
+        </ul>
+
+        <ul id="bottomSocials">
+          <i class="bottomTitle" lang="ru">Мы в соцсетях</i>
+          <i class="bottomTitle" lang="en">Our socials</i>
+          <i class="bottomTitle" lang="kz">Селіндік қонақ үйі</i>
+          <li class="contactUsBottom">
+            <a href="https://www.facebook.com/HotelCelinnaya/" target="_blank" rel="noopener"
+              ><span><img class="emojiImages" src="SitePics/facebook.svg" /></span> Facebook</a
+            >
+          </li>
+          <li class="contactUsBottom">
+            <a href="https://www.instagram.com/celinnayakostanai/" target="_blank" rel="noopener"
+              ><span><img class="emojiImages" src="SitePics/instagram.svg" /></span> Instagram</a
+            >
+          </li>
+          <li class="contactUsBottom">
+            <a href="https://vk.com/" target="_blank" rel="noopener"
+              ><span><img class="emojiImages" src="SitePics/vk.svg" /></span> VKontanke</a
+            >
+          </li>
+          <li class="contactUsBottom">
+            <a href="https://ok.ru/" target="_blank" rel="noopener"
+              ><span><img class="emojiImages" src="SitePics/ok-ru.svg" /> </span> OdnoKlassniki</a
+            >
+          </li>
+        </ul>
+      </div>
+
+      <div id="copyrightNotice">Hotel_Celinnaya (c) 2023</div>
+    </nav>
   </body>
 </html>
